# datadog_scraper

./: .dockerignore  .env.example  .gitignore  .main.py.swo  .main.py.swp  DOCUMENTATION_INDEX.md  Dockerfile  GITHUB_ACTIONS_COMPLETE.md  GITHUB_ACTIONS_GUIDE.md  README.md  comprehensive_scraper.py  datadog-mcp-server-config.json  datadog_all_links.txt  datadog_links.json  datadog_links_detailed.txt  datadog_mcp_server.py  datadog_tree_structure.txt  depth_comparison.py  docker-compose.yml  docker-deploy.sh  import-n8n-workflows.sh  local_automated_scraper.py  main.py  n8n-templates.json  pyproject.toml  quick_local_scraper.sh  requirements-mcp.txt  requirements.txt  setup-github-actions.sh  start.sh  test_separate_extraction.py
.github/: copilot-instructions.md
.github/workflows/: datadog-scraper.yml
docs/: ARCHITECTURE_DIAGRAM.md  CONSOLIDATION_COMPLETE.md  CONTENT_SCRAPING_GUIDE.md  FINAL_SUMMARY.md  RAG_GUIDE.md  RAG_INTEGRATION_SUMMARY.md  RAG_QUICKSTART.md  SCRAPING_COMPLETE.md  TESTING_CHECKLIST.md  UNIFIED_MAIN_SUMMARY.md
n8n-workflows/: mcp-basic-workflow.json  results-processing-workflow.json
